--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
         }
     ],
     "require": {
-        "php" : "^7.0",
-        "illuminate/http": "^5.1"
+        "php" : "^7.1",
+        "illuminate/http": "^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.2",
-        "phpunit/phpunit" : "4.*"
+        "orchestra/testbench": "^4.0",
+        "phpunit/phpunit" : "^8.0"
     },
     "autoload": {
         "psr-4": {
