--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,14 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php" : "^7.2",
-        "illuminate/http": "^5.8|^6.0"
+        "illuminate/http": "^5.8|^6.0|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8|^4.0",
+        "orchestra/testbench": "^3.8|^4.0|^5.0",
         "phpunit/phpunit" : "^8.0"
     },
     "autoload": {
