--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php" : "^7.2",
-        "illuminate/http": "^5.8|^6.0|^7.0"
+        "php": "^7.2",
+        "illuminate/http": "^5.8|^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8|^4.0|^5.0",
-        "phpunit/phpunit" : "^8.0"
+        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0",
+        "phpunit/phpunit": "^8.0|^9.3"
     },
     "autoload": {
         "psr-4": {
