--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/http": "^5.8|^6.0|^7.0|^8.0"
+        "illuminate/http": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0",
+        "orchestra/testbench": "^4.0|^5.0|^6.0",
         "phpunit/phpunit": "^8.0|^9.3"
     },
     "autoload": {
