--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/http": "^6.0|^7.0|^8.0"
+        "illuminate/http": "^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0|^5.0|^6.0",
-        "phpunit/phpunit": "^8.0|^9.3"
+        "orchestra/testbench": "^6.23",
+        "phpunit/phpunit": "^9.4"
     },
     "autoload": {
         "psr-4": {
