--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/http": "^8.0"
+        "illuminate/http": "^8.0|^9.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.23",
