--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "illuminate/http": "^8.0|^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.23",
+        "orchestra/testbench": "^6.23|^7.0",
         "phpunit/phpunit": "^9.4"
     },
     "autoload": {
