--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,15 +9,23 @@ jobs:
             fail-fast: true
             matrix:
                 os: [ubuntu-latest, windows-latest]
-                php: [8.2, 8.0, 7.4, 7.3]
-                laravel: [9.*, 8.*]
+                php: [8.2, 8.0, 7.4, 7.3, 8.1]
+                laravel: [9.*, 8.*, 10.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
+                    -   laravel: 10.*
+                        testbench: 8.*
                     -   laravel: 9.*
                         testbench: 7.*
                     -   laravel: 8.*
                         testbench: ^6.23
                 exclude:
+                    -  laravel: 10.*
+                       php: 8.0
+                    -  laravel: 10.*
+                       php: 7.4
+                    -  laravel: 10.*
+                       php: 7.3
                     -  laravel: 9.*
                        php: 7.4
                     -  laravel: 9.*
