--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/http": "^8.0|^9.0"
+        "illuminate/http": "^8.0|^9.0|^10"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.23|^7.0",
+        "orchestra/testbench": "^6.23|^7.0|^8.0",
         "phpunit/phpunit": "^9.4"
     },
     "autoload": {
