--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,6 +22,10 @@ jobs:
                 exclude:
                     -  laravel: 10.*
                        php: 8
+                    -  laravel: 10.*
+                       php: 7.4
+                    -  laravel: 10.*
+                       php: 7.3
                     -  laravel: 9.*
                        php: 7.4
                     -  laravel: 9.*
